--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "homepage": "https://github.com/phoneticgenius/agentql-proxy#readme",
   "dependencies": {
     "form-data": "^4.0.3",
-    "node-fetch": "^3.3.2",
-    "cloudconvert": "^4.2.3"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {},
   "description": ""
